# batchrouter-python-sdk

./: LICENSE  README.md  pyproject.toml
batchrouter/: __init__.py  batches.py  client.py  datasets.py  exceptions.py  models.py  types.py
tests/: __init__.py  conftest.py  test_batches.py  test_client.py  test_datasets.py  test_errors.py  test_models.py
