[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "batchrouter"
version = "0.1.0"
description = "Python SDK for BatchRouter - Cost-optimized batch LLM inference routing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "BatchRouter", email = "support@batchrouter.ai" }
]
keywords = ["llm", "batch", "openai", "anthropic", "inference", "routing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://batchrouter.ai"
Documentation = "https://docs.batchrouter.ai"
Repository = "https://github.com/BatchRouterAI/batchrouter-python-sdk"

[tool.hatch.build.targets.wheel]
packages = ["batchrouter"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
